still experimental, removing sidebar and adding panels not working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(addBounceMarkers)
 export(addLeafletSidebar)
 export(addPanel)
+export(closeLeafletSidebar)
+export(openLeafletSidebar)
+export(removeLeafletSidebar)
+export(removePanel)
 import(htmltools)
 import(leaflet)
 importFrom(htmltools,htmlDependency)
