add addMousePosition function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addBounceMarkers)
 export(addLeafletSidebar)
+export(addMousePosition)
 export(addPanel)
 export(closeLeafletSidebar)
 export(openLeafletSidebar)
